[package]
name = "first"
version = "0.1.0"
edition = "2021"

[lib]
path="src/lib.rs"

[[bin]]
path="src/main.rs"
name="first"

[dependencies]
actix-web = "4.3.1"
config = {version = "0.13.3", features = ["yaml"] }
reqwest = "0.11.16"
serde = {version = "1.0.160", features = ["derive"] }
tokio = {version = "1.28.0", features = ["macros", "rt-multi-thread"]}
uuid = { version = "1.3.2", features = ["v4"] }
chrono = {version="0.4.15", defaul-fetures=false}
env_logger = "0.10.0"
log = "0.4.17"
tracing = { version="0.1.37", features=["log"] }

# Using table-like toml syntax to avoid a super-long line!
[dependencies.sqlx]
version = "0.6.3"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]
